# opengl-webassembly

./: .gitignore  README.md  package-lock.json  package.json
engine/: CMakeLists.txt  a.out  build.sh  embedfile.cpp  main.cpp  textSomething.txt  toArray.cpp  toGLchar.cpp  toGLchar.sh
engine/assets/characters/seeu_miniature/: license.txt  scene.gltf
engine/glsl/fragment/: basic.pp.glsl  blur.pp.glsl  cel.glsl  grid.glsl  invert.pp.glsl  mono.glsl  monochrome.pp.glsl  spheresAndLights.glsl  vertexColor.glsl
engine/glsl/vertex/: basic.pp.glsl  extrude.glsl  sphereMirror.glsl  spheresAndLights.glsl  standard.glsl  varyingWorldPosition.glsl  vertexColor.glsl
engine/headers/: basic.h  camera.h  color.h  compileSettings.h  externalLibs.h  geometry.h  light.h  material.h  math.h  mesh.h  object3D.h  postEffect.h  preset.h  presets.h  renderer.h  scene.h  shader.h  test123.h  utils.h  webglHandle.h
engine/headers/geometries/: geometry.h  plane.h  rectangularCuboid.h  sphere.h
engine/headers/lights/: directionalLight.h  light.h  pointLight.h
engine/headers/materials/: cel.h  grid.h  material.h  monoMaterial.h  sphereMirror.h
engine/headers/math/: constants.h  geometry.h  matrix.h  vector.h
engine/headers/math/geometry/: geometry.h  rectangularCuboid.h  sphere.h
engine/headers/math/matrix/: gl.h  matrix.h  matrix4.h  projection.h  squareMatrix.h  transformation.h  view.h  world.h
engine/headers/math/vector/: vector3.h
engine/headers/meshes/: grid.h  mesh.h
engine/headers/object3D/: grid.h  object3D.h
engine/headers/postEffects/: blur.h  invert.h  monochrome.h  postEffect.h
engine/headers/presets/: colorTriangle.h  presetBase.h  spheresAndLights.h  staticGLTF.h  threeBabylonConcept.h  triangleAssembly.h  uniform.h
engine/headers/utils/: callback.h  color.h  shader.h
engine/src/: basic.h  camera.cpp  color.cpp  object3D.cpp  preset.cpp  renderer.cpp  scene.cpp  shader.cpp  utils.cpp  webglHandle.cpp
engine/src/geometries/: geometry.cpp  plane.cpp  rectangularCuboid.cpp  sphere.cpp
engine/src/lights/: directionalLight.cpp  light.cpp  pointLight.cpp
engine/src/materials/: cel.cpp  grid.cpp  material.cpp  monoMaterial.cpp  sphereMirror.cpp
engine/src/math/geometry/: geometry.cpp  rectangularCuboid.cpp  sphere.cpp
engine/src/math/matrix/: gl.cpp  matrix.cpp  matrix4.cpp  projection.cpp  squareMatrix.cpp  transformation.cpp  view.cpp  world.cpp
engine/src/math/vector/: vector3.cpp
engine/src/meshes/: grid.cpp  mesh.cpp
engine/src/object3D/: grid.cpp  object3D.cpp
engine/src/postEffects/: blur.cpp  invert.cpp  monochrome.cpp  postEffect.cpp
engine/src/presets/: colorTriangle.cpp  presetBase.cpp  spheresAndLights.cpp  staticGLTF.cpp  threeBabylonConcept.cpp  triangleAssembly.cpp
engine/src/shader/: shader.cpp  shader.h
engine/src/utils/: color.cpp  gltfLoader.cpp  shader.cpp
src/: App.css  App.tsx  index.tsx  store.ts
src/customHooks/: useInputs.ts
src/engineHandle/: index.ts
src/engineHandle/wasmLoader/: index.ts  specs.ts
src/reducer/: colorTriangle.ts  index.ts  spheresAndLights.ts  threeBabylonConcept.ts  triangleAssembly.ts
src/saga/: colorTriangle.ts  index.ts  spheresAndLights.ts  threeBabylonConcept.ts  triangleAssembly.ts
src/types/: index.ts
src/utils/: color.ts  index.ts  vector3.ts
