cmake_minimum_required(VERSION 3.26.3)

# Project name
project(engine)


# Exported functions
set(
    ENGINE_EXPORTED_FUNCTIONS
    _sayHello
    _initialize
    _setClearColor
)

# Include associated files
file(GLOB_RECURSE HEADERS headers/*.h)
file(GLOB_RECURSE SOURCES src/*)

# include_directories(src)

# file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/basic.glsl
#      DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src/basic.glsl)

# configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/basic.glsl
#     ${CMAKE_CURRENT_BINARY_DIR}/src COPYONLY)

# configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/basic.glsl ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

# configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/basic.glsl ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

# configure_file(${CMAKE_CURRENT_SOURCE_DIR}/basic.glsl
#     ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/hello.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

file (STRINGS "src/basic.glsl" BUILD_NUMBER)

# add_subdirectory("./src/")

# Executable
add_executable(${PROJECT_NAME} main.cpp ${SOURCES} ${HEADERS})

list(JOIN ENGINE_EXPORTED_FUNCTIONS "," COMMA_EXPORTED_FUNCTIONS)



# Settings
# set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "${GENERATE_SOURCE_MAPS_FLAG} -sWASM_BIGINT -Os -fno-rtti -lGL -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2 -sENVIRONMENT=web --closure 1 -sTEXTDECODER=2 -sMIN_FIREFOX_VERSION=70 -sMIN_SAFARI_VERSION=130000 -sMIN_IE_VERSION=0x7FFFFFFF -sMIN_EDGE_VERSION=79 -sMIN_CHROME_VERSION=80 -sABORTING_MALLOC=0 -sGL_SUPPORT_AUTOMATIC_ENABLE_EXTENSIONS=0 -sGL_EXTENSIONS_IN_PREFIXED_FORMAT=0 -sGL_EMULATE_GLES_VERSION_STRING_FORMAT=0 -sGL_POOL_TEMP_BUFFERS=0 -sGL_SUPPORT_SIMPLE_ENABLE_EXTENSIONS=0 -sGL_SUPPORT_EXPLICIT_SWAP_CONTROL=0 -WEBGL2_BACKWARDS_COMPATIBILITY_EMULATION=0 -sSUPPORT_ERRNO=0 -sFILESYSTEM=0 -sEXPORTED_FUNCTIONS=[${COMMA_EXPORTED_FUNCTIONS}] -sEXPORTED_RUNTIME_METHODS=[ccall,cwrap,addFunction,UTF8ToString] -sALLOW_TABLE_GROWTH -sFETCH -sUSE_OFFSET_CONVERTER=1 -sALLOW_MEMORY_GROWTH=1 -sTOTAL_MEMORY=67108864")

set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS
    "-sEXPORTED_FUNCTIONS=[${COMMA_EXPORTED_FUNCTIONS}]\
    -sEXPORTED_RUNTIME_METHODS=[ccall,cwrap,addFunction,UTF8ToString]\
    -sMIN_WEBGL_VERSION=2\
    -sUSE_SDL=2\
")